fixes bug that was causing overflow of tweets at small sizes after refactor

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -38,6 +38,10 @@ body {
 }
 
 @media only screen and (max-width: 630px) {
+  .tweet {
+    @include reset;
+  }
+
   #logo {
     font-size: 3rem;
   }
