--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -54,7 +54,7 @@
     }
     .tweet {
       padding: 0px 1em;
-      margin: 25px 0px;
+      margin: 1em 0px;
     }
 
     hr {
